--- a/preamble.tex
+++ b/preamble.tex
@@ -14,6 +14,7 @@
 \usepackage{microtype}
 \usepackage[shortlabels]{enumitem}
 \usepackage{booktabs}
+\usepackage{xspace}
 \usepackage{caption,subcaption}
 \captionsetup[subfigure]{subrefformat=simple,labelformat=simple}
 \renewcommand\thesubfigure{(\sc \alph{subfigure})}
@@ -108,7 +109,7 @@ vlined]{algorithm2e}
 \newcommand{\idealp}{\mathfrak{p}}
 \newcommand{\mon}{\operatorname{mon}}
 \newcommand{\idealc}{\mathfrak{c}}
-
+\newcommand{\J}{\mathcal{J}} % for multiplier ideals
 
 %linear & integer programs
 \newcommand{\LP}{\mathrm{P}}
@@ -189,6 +190,11 @@ vlined]{algorithm2e}
 \newcommand{\eg}{e.g., }
 \newcommand{\ie}{i.e., }
 \newcommand{\loccit}{\emph{loc.~cit.\ }}
+
+\newcommand{\muCool}{$\mu$-uniform\xspace}
+\newcommand{\nuCool}{$\nu$-uniform\xspace}
+\newcommand{\mustata}{Musta{\c{t}}\u{a}\xspace}
+
 
 %notes
 \usepackage[textwidth=3.3 cm,textsize=small,shadow
