--- a/aip.tex
+++ b/aip.tex
@@ -166,8 +166,11 @@ If $\kk$ is as above and $\ideala$ and $\idealb$ are nonzero proper ideals of $\
    A nonzero proper ideal $\ideala$ of $\QQ[x_1,\ldots,x_\numvars]$ is \emph{\muCool} if a condition analogous to that in \Cref{defn: nuCool} holds for $\mu(\ideala_p,\idealb_p,p^e)$, for each proper ideal $\idealb$ in $\QQ[x_1,\ldots,x_\numvars]$ whose radical contains $\ideala$, and each nonnegative integer $e$.
 \end{definition}
 
-The main result of this article is the proof that every nonzero proper monomial ideal is \muCool.
-Along the way we recover the aforementioned theorem of Budur, \mustata, and Saito, interpreting the coefficients in \eqref{eq: nu-uniformity for monomial ideals} in the context of certain optimization problems, whose study constitute the core of this work. 
+Our main result shows that monomial ideals are \muCool.
+\begin{thmintro}[(REF)]
+   Every nonzero proper monomial ideal of $\QQ[x_1,\ldots,x_\numvars]$ is \muCool.
+\end{thmintro}
+Along the way we recover the aforementioned theorem of Budur, \mustata, and Saito (REF), interpreting the coefficients in \eqref{eq: nu-uniformity for monomial ideals} in the context of certain optimization problems, whose study constitute the core of this work. 
 We also describe each coefficient of the polynomials determining $\mu(\ideala_p,\idealb_p,p^e)$, which are typically not as simple as \eqref{eq: nu-uniformity for monomial ideals}, in term of optimization problems.
 The following examples give a taste of the formulas obtained.
 
